Fix vertical alignment of cellphone wrap

--- a/src/styles/pages/app-container.scss
+++ b/src/styles/pages/app-container.scss
@@ -5,7 +5,7 @@
   max-width: 340px;
   min-height: 578px;
   height: 80vh;
-  margin: 10vh auto 10vh auto;
+  margin: 5vh auto 5vh auto;
 
   border:10px solid rgba(0,0,0,0.9);
   border-bottom-width: 70px;
